Clean code to remove warnings